# chatbot

./: .cursor-rules  .gitignore  Backend.md  CLAUDE.md  RAG_ARCHITECTURE.md  README-ENV.md  README.html  README.md  Test_Document_Sample.txt  package-lock.json  package.json  reset_system.sh  restart.sh  setup_ocr.sh  setup_ollama.sh  start_react_app.sh  test_frontend_preview.html  upload_variety.py
backend/: .env.example  pyproject.toml  requirements.txt  test_document_preview.py  test_document_search.py  test_enhanced_document_service.py  test_markdown_llm.py  test_new_chat_endpoint.py  test_table_improvements.py  test_vector_search.py  upload_variety.py
backend/app/: OLLAMA_DOCS.md  main.py
backend/app/api/routes/: admin.py  chat.py  documents.py  generate.py  upload.py
backend/app/core/: ai_config.py  config.py  interfaces.py  prompts.py  registry.py  startup.py  web_search_interfaces.py
backend/app/implementations/: __init__.py  content_processors.py  embedding_models.py  llm_models.py  precise_retrievers.py  query_analyzers.py  result_fusion.py  vector_databases.py  web_search_agents.py  web_search_providers.py
backend/app/models/: schemas.py
backend/app/services/: ai_service_manager.py  chat_service.py  colbert_service.py  database_service.py  document_service.py  hybrid_search_service.py  multiprocessing_service.py  ocr_document_service.py  parallel_pdf_service.py  vector_service.py  web_scraper.py
backend/scripts/: README.md  cleanup_system.sh  display_test_report.py
backend/tests/: README.md  run_tests.sh  test_comprehensive_system.py
frontend/: .env.example  clear-storage.js  package-lock.json  package.json  update-urls.sh
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: ChatPanel.tsx  Console.tsx  ConversationPanel.tsx  DocumentDetails.tsx  DocumentPreview.tsx  DocumentSources.tsx  FileUploadPanel.tsx  StatusPanel.tsx
frontend/src/config/: config.ts
frontend/src/styles/: GlobalStyles.tsx
test_data2/: narensniff.c  narensniff_arp.c  nping.c  ntracer_icmp.c  setmtu.c
