[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.13",
    "click==8.2.1",
    "colbert-ai==0.2.19",
    "coloredlogs==15.0.1",
    "csvkit==2.1.0",
    "dataclasses-json==0.6.7",
    "dateparser==1.2.0",
    "distro==1.9.0",
    "docx2txt==0.8",
    "duckduckgo-search==6.3.0",
    "durationpy==0.10",
    "faiss-cpu==1.8.0",
    "fastapi==0.115.13",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "google-auth==2.40.3",
    "google-generativeai==0.8.4",
    "googleapis-common-protos==1.70.0",
    "googlesearch-python==1.2.5",
    "grpcio==1.73.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "hnswlib==0.8.0",
    "html2text==2024.2.26",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.27.0",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "img2pdf==0.5.1",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kubernetes==33.1.0",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-core==0.3.66",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.25",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.4.1",
    "lxml==5.4.0",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.5.1",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "newspaper3k==0.2.8",
    "numpy==2.3.1",
    "oauthlib==3.3.1",
    "ollama==0.5.1",
    "onnxruntime==1.22.0",
    "openai==1.91.0",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.34.1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pdf2image==1.17.0",
    "pillow==11.2.1",
    "pillow-heif==0.15.0",
    "pinecone-client==5.0.1",
    "posthog==5.4.0",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pymupdf==1.26.1",
    "pypdf2==3.0.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-magic-bin==0.4.14 ; sys_platform == 'win32'",
    "python-multipart==0.0.20",
    "python-pptx==1.0.2",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.10.1",
    "readability==0.3.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "reportlab==4.2.5",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "sentence-transformers==4.1.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "trafilatura==1.12.2",
    "transformers==4.52.4",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "weaviate-client==4.17.0",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "xlsxwriter==3.2.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]
